--- a/styles/styles.css
+++ b/styles/styles.css
@@ -204,12 +204,6 @@ header {
   min-height: var(--nav-height-m);
 }
 
-@media (min-width: 1140px) {
-  header {
-    min-height: var(--nav-height-l);
-  }
-}
-
 h1, h2, h3,
 h4, h5, h6,
 .h1, .h2, .h3,
